; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mscutils/servman/extr_stop_dependencies.c_GetListOfServicesToStop.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mscutils/servman/extr_stop_dependencies.c_GetListOfServicesToStop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetListOfServicesToStop(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* null, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i64 @BuildListOfServicesToStop(i32** %4, i32* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32*, i32** %4, align 8
  store i32* %9, i32** %2, align 8
  br label %11

10:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %11

11:                                               ; preds = %10, %8
  %12 = load i32*, i32** %2, align 8
  ret i32* %12
}

declare dso_local i64 @BuildListOfServicesToStop(i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
